--- a/style.css
+++ b/style.css
@@ -22,6 +22,31 @@ body {
 .header {
     margin-bottom: 20px;
 }
+.Perempuan-Gila {
+    color:  rgb(43, 41, 41);
+    font-family: 'Arial', sans-serif;
+    font-size: 15px; 
+    font-weight: bold;
+}
+
+button {
+    background-color:  rgb(43, 41, 41);
+    border: none;
+    color: white;
+    padding: 5px 15px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 10px;
+    margin: 4px;
+    cursor: pointer;
+    border-radius: 5px;
+    transition: background-color 0.3s;
+}
+
+button:hover {
+    background-color: grey;
+}
 
 .profile-picture {
     width: 100px;
